hphp/test/slow/hack-arrays/callable.php.expectf
====================================================
int(1)
====================================================
int(2)
====================================================
int(3)
====================================================
int(4)
====================================================
array(1) {
  [0]=>
  int(5)
}
====================================================
array(1) {
  [0]=>
  int(6)
}
====================================================

Fatal error: Invalid callable (array) in %s on line 9
====================================================

Fatal error: Invalid callable (array) in %s on line 9
====================================================

Warning: Invalid argument: function: not a valid callback array in %s on line 10
NULL
====================================================

Warning: Invalid argument: function: not a valid callback array in %s on line 10
NULL
====================================================

Warning: array_map() expects parameter 1 to be a valid callback in %s on line 11
NULL
====================================================

Warning: array_map() expects parameter 1 to be a valid callback in %s on line 11
NULL
====================================================

Fatal error: Invalid callable (array) in %s on line 9
====================================================

Warning: Invalid argument: function: not a valid callback array in %s on line 10
NULL
====================================================

Warning: array_map() expects parameter 1 to be a valid callback in %s on line 11
NULL
